--- a/Lesson 4/css/style.css
+++ b/Lesson 4/css/style.css
@@ -1,7 +1,7 @@
 
 		body {
       font-size: 16px;
-		color: rgb(49, 43, 43);
+		color: black;
       line-height: 1.6;
       font-family: 'Roboto', sans-serif;
       font-weight: 500;
