--- a/Lesson 8/css/style.css
+++ b/Lesson 8/css/style.css
@@ -686,3 +686,162 @@ mark {
    width: 100%;
    border-radius: 30px;
 }
+
+
+/* =========Game  2============== */
+
+.game__screen {
+   max-width: 700px;
+   height: 600px;
+   margin: 0 auto;
+   border: 2px solid black;
+   position: relative;
+   background-color: rgb(206, 201, 201);
+   border-radius: 10px;
+}
+
+.start,
+.finish {
+   width: 50px;
+   height: 50px;
+   border: 1px solid black;
+   position: absolute;
+   border-radius: 10px;
+}
+
+.start {
+   top: 0;
+   left: 0;
+   background-color: greenyellow;
+}
+
+
+.finish {
+   bottom: 0;
+   right: 0;
+   background-color: red;
+}
+
+.a {
+   width: 100px;
+   height: 40px;
+   background-color: wheat;
+   position: relative;
+   top: -10px;
+   right: -50px;
+   visibility: hidden;
+}
+
+.start:hover .a {
+   visibility: visible;
+}
+
+.b {
+   height: 180px;
+   width: 30px;
+   background-color: wheat;
+   position: relative;
+   top: 40px;
+   right: -70px;
+   visibility: hidden;
+}
+
+.a:hover .b {
+   visibility: visible;
+}
+
+.c {
+   width: 300px;
+   height: 20px;
+   background-color: wheat;
+   position: relative;
+   top: 180px;
+   visibility: hidden;
+}
+
+.b:hover .c {
+   visibility: visible;
+}
+
+.d {
+   height: 280px;
+   width: 15px;
+   background-color: wheat;
+   position: relative;
+   right: -300px;
+   visibility: hidden;
+}
+
+.c:hover .d {
+   visibility: visible;
+}
+
+.e {
+   width: 210px;
+   height: 10px;
+   background-color: wheat;
+   position: relative;
+   top: 280px;
+   visibility: hidden;
+}
+
+.d:hover .e {
+   visibility: visible;
+}
+
+.f {
+   height: 70px;
+   width: 17px;
+   background-color: wheat;
+   position: relative;
+   right: -210px;
+   visibility: hidden;
+}
+
+.e:hover .f {
+   visibility: visible;
+}
+
+
+.end {
+   position: relative;
+   width: 45px;
+   height: 50px;
+   top: 25px;
+   right: 0px;
+   /*background-color: rgb(206, 201, 201);*/
+   background-color: wheat;
+   visibility: hidden;
+}
+
+.f:hover .end {
+   visibility: visible;
+}
+
+
+.fin {
+   z-index: 999;
+   width: 600px;
+   height: 600px;
+   background: url('../img/Krasava.png') no-repeat;
+   background-size: contain;
+   position: absolute;
+   right: 0px;
+   top: -540px;
+   visibility: hidden;
+}
+
+.end:hover .fin {
+   visibility: visible;
+}
+
+
+
+.finish {
+   padding-top: 30px;
+   bottom: 0;
+   right: 0;
+   background-color: red;
+   font-weight: 900;
+   font-size: 14px;
+}
